--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     Matrix,
     plyr (>= 1.8.4),
     dplyr (>= 0.8.3),
+    purrr (>= 0.3.2),
     reshape2 (>= 1.4.3),
     SwissHistMunData
 Suggests:
